# mcp-toolbox

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
docs/: demo.tape  template-authoring.md  troubleshooting.md  v2-gap-analysis.md
examples/petstore/: README.md  pyproject.toml
examples/petstore/src/petstore_api_mcp_server/: __init__.py  auth.py  client.py  errors.py  tool.py
examples/petstore/src/petstore_api_mcp_server/tools/: __init__.py  create_pet.py  delete_pet.py  get_pet_by_id.py  list_orders.py  update_pet.py
examples/petstore/tests/: conftest.py
src/mcp_toolbox/: cli.py  config.py  pipeline.py
src/mcp_toolbox/analyze/: __init__.py  analyzer.py  models.py  naming.py  schema_ir.py  schema_mapper.py  type_mapper.py
src/mcp_toolbox/generate/: __init__.py  formatter.py  generator.py
src/mcp_toolbox/generate/templates/: auth.py.jinja2  client.py.jinja2  conftest.py.jinja2  env_example.jinja2  errors.py.jinja2  init.py.jinja2  models.py.jinja2  pyproject.toml.jinja2  readme.md.jinja2  server.py.jinja2  tool.py.jinja2  tool_module.py.jinja2  tools_init.py.jinja2
src/mcp_toolbox/parse/: __init__.py  parser.py
src/mcp_toolbox/utils/: __init__.py  strings.py
src/mcp_toolbox/validate/: __init__.py  validator.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_config.py  test_e2e.py  test_e2e_mcp_session.py  test_generator.py  test_naming.py  test_parser.py  test_schema_mapper.py  test_snapshots.py  test_type_mapper.py  test_validator.py
tests/fixtures/: github-issues.yaml  petstore.yaml
tests/snapshots/petstore/: models.py.snap  server.py.snap
tests/snapshots/petstore/tools/: list_pets.py.snap
