[project]
name = "petstore_api-mcp-server"
version = "0.2.0"
description = "MCP server for Petstore API"
requires-python = ">=3.10"
dependencies = [
 "mcp[cli]>=1.26.0",
 "httpx>=0.27.1",
 "pydantic>=2.5",
]

[project.scripts]
petstore_api-mcp-server = "petstore_api_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
